Align correctly home page

--- a/muziki/src/Layout.css
+++ b/muziki/src/Layout.css
@@ -4,13 +4,8 @@ body {
   background-color: black;
     margin: 0;
     font-family: Arial, sans-serif;
-  }
+}
   
-  .layout {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
   
   header {
     background-color: #d3d3d3;
